# yalab-procedures

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  codecov.yml  pyproject copy.toml  pyproject.toml  requirements_dev.txt  tox.ini  trials.ipynb
.github/: ISSUE_TEMPLATE.md
.github/workflows/: codecov-report.yml  github-actions.yml
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/api_reference/: dicom_to_bids.rst  index.rst  procedure.rst
docs/procedures/: axsi.rst  dicom_to_bids.rst  index.rst  mrtrix_preprocessing.rst  neuroflow.rst
docs/user_guide/: index.rst  procedure.rst
src/yalab_procedures/: __init__.py  cli.py
src/yalab_procedures/interfaces/data_grabber/: data_grabber.py  default_bids_query.json
src/yalab_procedures/procedure/: __init__.py  procedure.py
src/yalab_procedures/procedures/: __init__.py  procedure.py
src/yalab_procedures/procedures/axsi/: __init__.py  axsi.py
src/yalab_procedures/procedures/base/: __init__.py  procedure.py
src/yalab_procedures/procedures/dicom_to_bids/: __init__.py  dicom_to_bids.py
src/yalab_procedures/procedures/dicom_to_bids/templates/: heuristic.py  post_heudiconv.py
src/yalab_procedures/procedures/kepost_procedure/: kepost_procedure.py
src/yalab_procedures/procedures/kepost_procedure/templates/: inputs.py
src/yalab_procedures/procedures/keprep/: keprep.py
src/yalab_procedures/procedures/keprep_procedure/: keprep_procedure.py
src/yalab_procedures/procedures/keprep_procedure/templates/: inputs.py
src/yalab_procedures/procedures/mrtrix_preprocessing/: mrtrix_preprocessing.py
src/yalab_procedures/procedures/mrtrix_preprocessing/templates/: BN_atlas_big.json  datain.txt
src/yalab_procedures/procedures/mrtrix_preprocessing/workflows/: mrtrix_preprocessing_wf.py
src/yalab_procedures/procedures/mrtrix_preprocessing/workflows/data_grabber/: data_grabber.py
src/yalab_procedures/procedures/mrtrix_preprocessing/workflows/prepare_inputs/: bids_to_input.py  prepare_inputs.py
src/yalab_procedures/procedures/mrtrix_preprocessing/workflows/prepare_inputs/templates/: BN_atlas_big.json
src/yalab_procedures/procedures/neuroflow/: __init__.py  neuroflow.py
src/yalab_procedures/procedures/qsiparc/: qsiparc.py
src/yalab_procedures/procedures/qsiparc/templates/: outputs.py
src/yalab_procedures/procedures/qsiprep/: qsiprep.py
src/yalab_procedures/procedures/qsirecon/: qsirecon.py
src/yalab_procedures/procedures/smriprep/: __init__.py  smriprep.py
src/yalab_procedures/procedures/smriprep/templates/: outputs.py
tests/: __init__.py  test_yalab_procedures.py
tests/procedure/: mock_procedure.py  test_procedure.py
tests/procedures/axsi/: test_axsi.py
tests/procedures/dicom_to_bids/: test_dicom_to_bids.py
tests/procedures/keprep/: test_keprep.py
tests/procedures/mrtrix_preprocessing/: test_mrtrix_preprocessing.py
tests/procedures/neuroflow/: test_neuroflow.py
tests/procedures/procedure/: mock_procedure.py  test_procedure.py
tests/procedures/smriprep/: test_smriprep.py
