[tool.poetry]
name = "yalab_procedures"
version = "0.0.1"
description = "The yalab-procedures repository is dedicated to managing and executing data processing procedures for MRI data in the Assaf Neuro Lab."
authors = ["YALab DevOps <yalab.dev@gmail.com>","Gal Kepler <galkepler@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/yalab-dev/yalab_procedures"
repository = "https://github.com/yalab-dev/yalab_procedures"
documentation = "https://github.com/yalab-dev/yalab_procedures"
keywords = ["neuroscience", "MRI", "data processing", "automation", "standardization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
typer = "^0.12.0"
tox = "^4.15.0"
bump2version = "^1.0.1"
wheel = "^0.43.0"
sphinx = "^7.3.7"
twine = "^5.1.0"
ipykernel = "^6.29.4"
pre-commit = "^3.7.1"
chardet = "^5.2.0"
sphinx-rtd-theme = "^2.0.0"

nipype = "^1.8.6"
pydicom = "^2.4.4"
bids-validator = "^1.14.6"
heudiconv = "^1.1.6"
pytest-mock = "^3.14.0"
pybids = "^0.16.5"
fslpy = "^3.19.1"
gitpython = "^3.1.43"
pytest-cov = "^5.0.0"
keprep = "^0.2.0"
setuptools = "^72.0.0"
neuroflow-yalab = "^0.1.4"

[tool.poetry.dev-dependencies]
coverage = "^7.5.4"  # testing
mypy = "^1.10.0"  # linting
pytest = "^8.2.2"  # testing
ruff = "^0.4.4"  # linting
black = "^24.4.2"
flake8 = "^7.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cortexquest = "yalab_procedures:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

# black configuration
[tool.black]
line-length = 88
target-version = ['py38']

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3  # This setting allows multi-line imports with parentheses
include_trailing_comma = true  # Ensures trailing commas for better diff
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Mypy configuration
[tool.mypy]
files = "."
strict = false
warn_unreachable = true
warn_no_return = true
ignore_missing_imports = true

# coverage configuration
[tool.coverage.run]
branch = true
source = [
    "src/yalab_procedures"
]

[tool.coverage.report]
omit = [
    "tests/*"
]
